--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "genezio",
   "displayName": "Genezio",
   "description": "Deploy your genezio app to app.genez.io right from Visual Studio Code",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "author": {
     "name": "Genezio"
   },
@@ -51,7 +51,6 @@
           "group": "navigation",
           "when": "genezio.signedIn"
         }
-
       ]
     }
   },
@@ -85,6 +84,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cli-progress": "^3.12.0",
-    "isomorphic-git": "^1.27.1"
+    "isomorphic-git": "^1.27.1",
+    "yaml": "^2.5.1"
   }
 }
